# EquivarLayer

./: .gitignore  pyproject.toml
src/asel/: EquivarLayer_RS.py  EquivarLayer_affine.py  EquivarLayer_scale.py  __init__.py  main_canonicalization.py  main_prediction.py  model_utils.py  prepare_data_loader.py  train_utils.py
src/asel/data/kernels/: kernel1.pt  kernel2.pt
